# litecode

./: README.md
litecode/lexer/: CMakeLists.txt  README.md
litecode/lexer/inc/: ErrorReporter.hpp  Scanner.hpp  Token.hpp  TokenType.hpp
litecode/lexer/src/: Scanner.cpp  main.cpp
litecode/src/: README.md  Scanner.cpp  driverCode.cpp
litecode/src/TypesAndData/: Token.cpp  TokenType.cpp
